# queue-system

./: .gitignore  README.md  pyproject.toml  schema.yml
api/: settings.py  urls.py
api/apps/helpers/: apps.py  models.py  serializers.py
api/apps/reason/: apps.py  exception.py  models.py  response.py  serializers.py  urls.py  views.py
